[project]
name = "researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.18",
    "fastapi==0.116.1",
    "griffe>=1.15.0",
    "mcp>=1.25.0",
    "mlb-statsapi==1.9.0",
    "openai==1.85.0",
    "openai-agents==0.0.17",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "sqlalchemy==2.0.43",
    "tenacity>=9.1.2",
    "types-requests>=2.32.4.20250913",
    "typing-extensions==4.15.0",
    "uv>=0.9.20",
    "uvicorn>=0.40.0",
]
